# RANSAC

./: .gitignore  CMakeLists.txt  README.md
examples/: linear_example.cpp
include/: model.hpp  ransac.hpp
lib/: model.cpp  ransac.cpp
tests/: test_linear_model.cpp
